--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,7 @@ li {
   text-align: left;
   margin: 10px auto;
   padding: 10px 20px;
-  min-height: 40px;
+  /*min-height: 40px;*/
   background-color: #fff;
   border-radius: 3px;
 }
