--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,6 @@ body {
 }
 
 .list {
-  /*display: inline-block;*/
   float: left;
   width: 260px;
   vertical-align: top;
@@ -47,7 +46,14 @@ li {
   text-align: left;
   margin: 10px auto;
   padding: 10px 20px;
-  /*min-height: 40px;*/
   background-color: #fff;
   border-radius: 3px;
+}
+
+.placeholder {
+  height: 50px;
+}
+
+.card-wrapper {
+  min-height: 1px;
 }
